# gen-id

./: Cargo.toml  Makefile  README.md
src/: lib.rs
